<resources>

    <!-- Name -->
    <string name="app_name">Group Shop</string>

    <!-- Titles -->
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_menu_list">Shopping Lists</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_profile_setup">Profile Setup</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Profile Setup -->
    <string name="profile_name_hint">Your Name</string>
    <string name="profile_email_hint">Email Address</string>
    <string name="save_profile">Update Profile</string>
    <string name="username_length_error">Username must be at least %1$d characters long</string>
    <string name="username_character_error">Username contains invalid characters</string>
    <string name="username_taken">Username is already in use</string>
    <string name="title_activity_delete_image">Delete Image</string>


    <!-- Shopping Lists Menu -->
    <string name="new_list_title_text">Name New List</string>
    <string name="empty_lists">No lists found</string>
    <string name="item_list_count_checked">0</string>
    <string name="item_list_count_separator">/</string>
    <string name="item_list_count_total">0</string>

    <!-- Shopping list row dropdown -->
    <string name="action_list_edit">Edit</string>
    <string name="action_list_share">Share</string>
    <string name="action_list_delete">Delete</string>
    <string name="rename_list_title_text">Rename List</string>
    <string name="sign_in_title_text">Sign In</string>

    <!-- Shopping List -->
    <string name="action_delete_purchased">Delete purchased</string>
    <string name="snackbar_delete_purchased">Deleted %1$d purchased items.</string>

    <!-- Add Item -->
    <string name="action_settings">Settings</string>
    <string name="new_item_title_text">Add New Item</string>
    <string name="empty_list">No shopping list items</string>

    <!-- Edit Item -->
    <string name="title_activity_item_edit">New Item</string>
    <string name="item_edit_save">Save</string>
    <string name="item_edit_name_hint">Name</string>
    <string name="item_edit_quantity_selection">Quantity</string>
    <string name="units_spinner_default">Units</string>

    <!-- Number Picker -->
    <string name="number_picker_increment">+</string>
    <string name="number_picker_decrement">-</string>
    <string name="number_picker_default_value">1</string>

    <!-- Sign in redefinitions -->
    <string name="default_toolbar_title">GroupShop Sign In</string>

    <!-- Nav Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_account_group">Accounts</string>
    <string name="sign_in_button_text">Sign In or Register</string>
    <string name="sign_in_text">Sign in to sync lists to the cloud</string>
    <string name="nav_drawer_edit_profile">Edit Profile</string>
    <string name="nav_drawer_settings">Settings</string>

    <!-- Progress Dialogs -->
    <string name="dialog_update_profile">Updating profile…</string>
    <string name="dialog_create_profile">Creating profile…</string>

    <!-- Sharing -->
    <string name="share_link_uri">https://groupshop.me/invite</string>
    <string name="dynamic_link">u9j7f.app.goo.gl</string>
    <string name="invitation_received_title">Invitation Received</string>
    <string name="invitation_received_message">You received an invitation for the list</string>
    <string name="invitation_title">Share a shopping list</string>
    <string name="invitation_message">You were invited to a new shopping list: %1$s</string>
    <string name="invitation_cta">View</string>

</resources>
