<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_content_margin">

    <AutoCompleteTextView
        android:id="@+id/dialog_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:inputType="textCapWords"/>

    <LinearLayout
        android:id="@+id/quantity_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/item_edit_quantity_selection"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_increase"
                android:layout_width="@dimen/number_picker_button_width"
                android:layout_height="match_parent"
                android:background="@color/number_picker_border"
                android:padding="0dp"
                android:text="@string/number_picker_increment"
                android:textSize="@dimen/number_picker_font_size"/>

            <EditText
                android:id="@+id/number_picker_display"
                android:layout_width="@dimen/number_picker_display_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/number_picker_border"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="@dimen/number_picker_min_height"
                android:text="@string/number_picker_default_value"/>

            <Button
                android:id="@+id/button_decrease"
                android:layout_width="@dimen/number_picker_button_width"
                android:layout_height="match_parent"
                android:background="@color/number_picker_border"
                android:padding="0dp"
                android:text="@string/number_picker_decrement"
                android:textSize="@dimen/number_picker_font_size"/>

            <Spinner
                android:id="@+id/unit_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>