<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_setup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_content_margin"
    tools:context=".profile.edit.EditProfileActivity">

    <ImageButton
        android:id="@+id/profile_image_button"
        android:layout_width="@dimen/photo_select_dimen"
        android:layout_height="@dimen/photo_select_dimen"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/image_select_padding"
        android:background="@drawable/ic_account_circle_grey"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/profile_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/save_profile"
        android:textColor="@android:color/white"
        android:theme="@style/AppTheme.PrimaryButton"/>

</LinearLayout>
